--- a/src/views/contactUs.html
+++ b/src/views/contactUs.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>STORM</title>
     <link rel="stylesheet" href="style/css.css">
+    <link rel="stylesheet" href="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.css">
+    <script src="APIs/jquery-ui-1.11.4.custom/external/jquery/jquery.js"></script>
+    <script src="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+    <script src="scripts/projectSetup.js"></script>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <script src="scripts/jquery.csv-0.71.min.js"></script>
 </head>
 <body>
 <div class="header">
