--- a/src/views/index.html
+++ b/src/views/index.html
@@ -216,8 +216,8 @@
             <br>
             <div class="container">
                 <div class="vid">
-            <video poster="vid.jpg" width="640" height="480" controls>
-                <source src="movie.mp4" type="video/mp4">
+            <video width="640" height="480" controls>
+                <source src="STORM-vid.mp4" type="video/mp4">
                 There will be a video of STORM being used.
                 </video>
                 <br>
